Changes since version 1.1.0
---------------------------

- Added new method Ice::ObjectAdapter::destroy(). After this method
  has been called it is now permissible to recreate a new object
  adapter with the same name as the destroyed adapter.

- Added new method Ice::Communicator::createObjectAdapterWithRouter()
  which creates a routed object adapter. A object adapter can now only
  have one router associated with it, which is set with using this 
  method or by setting the <AdapterName>.Router property.  Also 
  as a result of this the Ice::ObjectAdapter::addRouter() and
  Ice::ObjectAdapter::removeRouter() methods have been removed.

- Added communicator initialize method which takes a InitializationData
  structure containing communicator members which are only allowed
  to be set during communicator creation. Currently included are
  Properties, Logger, and default context. The initializeWith
  communicator initialization functions have been deprecated and the
  setLogger() and setDefaultContext() methods have been removed.

- Added support for the "cpp:type:wstring" slice metadata. When used
  generated code will use std::wstring instead of std::string. See
  manual for more details.

- Added requestId to Current.


Changes since version 1.0.0
---------------------------

- Added support for the Visual C++ 2005 compiler.

- Removed the Ice.Warn.Leaks property.

- If several proxies share the same connection, and an operation call
  on one of the proxies causes a failure and the shared connection to
  be closed, then subsequent calls on the other proxies will try to
  establish a new connection instead of throwing an exception, even if
  retries are disabled.

- Added blocking client side concurrency model. The use of this model
  is controlled by the Ice.Blocking property.

- If a proxy is not configured with the -h parameter, Ice will now
  attempt to connect using all local interfaces. The loopback